# CLSTL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
.github/workflows/: build.yml  build_clang.yml  build_gcc.yml  build_msvc.yml
include/CLSTL/: algorithm.h  array.h  hash.h  list.h  optional.h  pair.h  shared_ptr.h  string.h  unique_ptr.h  unordered_map.h  vector.h
scripts/: build.sh
src/: hash.cpp  optional.cpp
tests/: algorithm.cpp  array.cpp  hash.cpp  list.cpp  optional.cpp  shared_ptr.cpp  string.cpp  unique_ptr.cpp  unordered_map.cpp  vector.cpp
